--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ httpx==0.25.1
 idna==3.10
 pydantic==2.10.6
 pydantic_core==2.27.2
+python-dotenv==1.0.1
 sniffio==1.3.1
 starlette==0.27.0
 typing_extensions==4.12.2
